--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <title>雪</title>
 </head>
 <style>
@@ -26,10 +26,84 @@
         color: #FFF;
         font-size: 20px;
     }
+    .btn1, .btn2{
+        width: 100px;
+        height: 40px;
+        position: absolute;
+        top: 80px;
+    }
+    .btn1 {
+        left: 10px;
+    }
+    .btn2 {
+        left: 150px;
+    }
+
+    .loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        overflow: hidden;
+        height: 80px;
+        width: 80px;
+        border: 1px solid transparent;
+        box-shadow: 0 0 0 2px rgb(25, 116, 253);
+        border-radius: 50%;
+    }
+
+    .waves {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background: rgb(30, 146, 255);
+        box-shadow: inset 0 0 50px rgb(0,0,0,0.3);
+    }
+
+    .waves::before,
+    .waves::after {
+        content: '';
+        position: absolute;
+        width: 200%;
+        height: 200%;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -75%);
+        background: #000;
+    }
+
+    .waves::before {
+        border-radius: 45%;
+        background: rgb(248, 248, 248);
+        animation: wave91234 5s linear infinite;
+    }
+
+    .waves::after {
+        border-radius: 40%;
+        background: rgb(255,255,255,0.5);
+        animation: wave91234 10s linear infinite;
+    }
+
+    @keyframes wave91234 {
+        0% {
+            transform: translate(-50%, -70%) rotate(0deg);
+        }
+
+        100% {
+            transform: translate(-50%, -70%) rotate(360deg);
+        }
+    }
 </style>
 <body>
+<!--<div class="loader">-->
+<!--    <div class="waves"></div>-->
+<!--</div>-->
 <p id="time"></p>
 <p id="fps"></p>
+<button class="btn1" onclick="start()">开始</button>
+<button class="btn2" onclick="pause()">暂停</button>
+<!--<iframe src="https://weather.panrenjie.cn/" style="position: absolute;left: 200px;top: 100px;width: 1000px;height: 800px" frameborder="0"></iframe>-->
 <canvas id="cav" style="background-color: black"></canvas>
 </body>
 <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
@@ -39,7 +113,8 @@
     setInterval(() => {
         time.innerHTML = dayjs().format('HH:mm dddd / A')
     }, 1000)
-
+    var snowflake = ''
+    var monitorFPS = ''
     //绘制雪花
     const cvs = document.querySelector('#cav')
     const ctx = cvs.getContext('2d')
@@ -47,7 +122,7 @@
     cvs.width = width
     cvs.height = height
     ctx.fillStyle = "#FFF"
-    const bgColor = Array.from(new Array(400)).map(v => {
+    const bgColor = Array.from(new Array(500)).map(v => {
         return {
             x: Math.random() * width,
             y: Math.random() * height,
@@ -62,7 +137,7 @@
             ctx.rect(v.x, v.y, 3, 3)
         })
         ctx.fill()
-        requestAnimationFrame(render)
+        snowflake = requestAnimationFrame(render)
     }
     render()
 
@@ -84,8 +159,16 @@
             frame = 0
             lastTime = now
         }
-        window.requestAnimationFrame(loop)
+        monitorFPS =  window.requestAnimationFrame(loop)
     }
     loop()
+    var start = function () {
+        snowflake = requestAnimationFrame(render)
+        monitorFPS = requestAnimationFrame(loop)
+    }
+    var pause = function () {
+        cancelAnimationFrame(snowflake)
+        cancelAnimationFrame(monitorFPS)
+    }
 </script>
 </html>
